# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("default") {
  testonly = true
  deps = [
    "//flutter",
  ]
}

group("dist") {
  testonly = true

  deps = [
    "//flutter:dist",
  ]
}

group("archives") {
  testonly = true

  deps = [
    "//flutter/build/archives:artifacts"
  ]
}
