# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("assets") {
  sources = [
    "asset_provider.h",
    "directory_asset_bundle.cc",
    "directory_asset_bundle.h",
    "unzipper_provider.cc",
    "unzipper_provider.h",
    "zip_asset_store.cc",
    "zip_asset_store.h",
  ]

  deps = [
    "$flutter_root/glue",
    "//garnet/public/lib/fxl",
    "//garnet/public/lib/zip",
  ]

  public_deps = [
    "//third_party/zlib:minizip",
  ]

  public_configs = [
    "$flutter_root:config",
  ]
}
